# flappy

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp
src/components/: boundingbox.hpp  gravity.hpp  jump.hpp  passedbird.hpp  pipe.hpp  position.hpp  sprite.hpp  velocity.hpp
src/core/: app.cpp  app.hpp  constants.hpp  factories.cpp  factories.hpp
src/sys/: pipe_behaviour.cpp  pipe_behaviour.hpp
